fixed graph on narrow widths

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -2777,6 +2777,25 @@ key {
   }
 }
 
+@media only screen and (max-width: 600px) {
+#middle{
+  #result{
+    grid-template-areas:
+      "stats stats"
+      "chart chart"
+      "morestats morestats";
+    .stats{
+      grid-template-areas: "wpm acc";
+      gap: 4rem;
+    }
+    .stats.morestats{
+      grid-template-rows: 1fr 1fr 1fr;
+      gap: 1rem;
+    }
+  }
+}
+}
+
 @media only screen and (max-width: 500px) {
   #top{
     .logo{
